# secondSemester

./: .gitignore  README.md  cpuinfo.txt
arrayD/: CMakeLists.txt
arrayD/arr.lib/: CMakeLists.txt
arrayD/arr.lib/arrayD/: CMakeLists.txt
arrayD/arr.test/: CMakeLists.txt  tests.cpp
rational/: CMakeLists.txt
rational/rat.test/: CMakeLists.txt  tests.cpp
samsonov_n_o/: CMakeLists.txt
samsonov_n_o/arrayD/arr.lib/arrayD/: arrayD.cpp
samsonov_n_o/arrayd/: CMakeLists.txt
samsonov_n_o/arrayd/arr.lib/: CMakeLists.txt
samsonov_n_o/arrayd/arr.lib/arrayd/: CMakeLists.txt  arrayd.hpp
samsonov_n_o/arrayd/arr.lib/arrayd/include/arrayd/: arrayd.hpp
samsonov_n_o/arrayd/arr.test/: CMakeLists.txt  tests.cpp
samsonov_n_o/prj.cw/: CMakeLists.txt
samsonov_n_o/prj.cw/docs/: Doxyfile
samsonov_n_o/prj.cw/prj.lab/: CMakeLists.txt  parse.cpp
samsonov_n_o/prj.cw/prj.lab/include/lf_queue/: lf_queue.hpp
samsonov_n_o/prj.cw/prj.test/: CMakeLists.txt  example.cpp  lf_queue.test.cpp
samsonov_n_o/prj.cw/prj.test/bench/: lf_queue_bench.cpp
samsonov_n_o/prj.lab/: CMakeLists.txt
samsonov_n_o/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
samsonov_n_o/prj.lab/arrayd/arrayd/: arrayd.cpp
samsonov_n_o/prj.lab/arrayd/arrayd/include/arrayd/: arrayd.hpp
samsonov_n_o/prj.lab/arrayd/include/arrayd/: arrayd.hpp
samsonov_n_o/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
samsonov_n_o/prj.lab/arrayt/include/arrayt/: arrayt.hpp
samsonov_n_o/prj.lab/figures/: figures.cpp
samsonov_n_o/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
samsonov_n_o/prj.lab/matrixs/include/matrixs/: matrixs.hpp
samsonov_n_o/prj.lab/orto/: orto.cpp
samsonov_n_o/prj.lab/rational/: CMakeLists.txt  rational.cpp
samsonov_n_o/prj.lab/rational/include/rational/: rational.hpp
samsonov_n_o/prj.lab/rational/rational/: CMakeLists.txt  rational.cpp
samsonov_n_o/prj.lab/rational/rational/include/rational/: rational.hpp
samsonov_n_o/prj.lib/: CMakeLists.txt
samsonov_n_o/prj.lib/arr.lib/arrayd/: CMakeLists.txt
samsonov_n_o/prj.lib/rat.lib/: CMakeLists.txt
samsonov_n_o/prj.test/: CMakeLists.txt  arr.test.cpp  matrixs.test.cpp  rat.test.cpp  tarr.test.cpp
samsonov_n_o/rational/: CMakeLists.txt
samsonov_n_o/rational/rat.lib/rational/: CMakeLists.txt  rational.cpp  rational.hpp
samsonov_n_o/rational/rat.test/: CMakeLists.txt  tests.cpp
